--- a/templates/base.html
+++ b/templates/base.html
@@ -42,9 +42,18 @@
         <li class="{% block explore %}{% endblock %}"><a target="_blank" href="{% url 'explore' %}">发现</a></li>
         <li class="{% block topic %}{% endblock %}"><a target="_blank" href="{% url 'topic_list' %}">话题</a></li>
       </ul>
-      <form class="navbar-form navbar-left">
+      <form action="/search/" target="_blank" class="navbar-form navbar-left" method="get">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="搜索你感兴趣的内容">
+          <select name="search_type" class="form-control">
+            <option value="question" selected="selected">提问</option>
+            <option value="answer">回答</option>
+            <option value="topic">话题</option>
+            <option value="user">用户</option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <input type="text" name="keywords" required maxlength="20" class="form-control" placeholder="搜索你感兴趣的内容" value="{% block keywords %}{% endblock %}">
         </div>
         <button type="submit" class="btn btn-default">搜索</button>
       </form>
