--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
 
 <div class="footer">
     <p class="text-center text-muted">&copy;taoing的知乎儿</p>
-    <p class="text-center text-muted">Django | <a target="_blank" href="https://github.com/taoing/zhihuer">源码</a></p>
+    <p class="text-center text-muted">Django | <a target="_blank" href="https://github.com/taoing/zhihuer">GitHub</a></p>
 </div>
 
 <div id="back-to-top"><img width="40" height="40" src="{{ MEDIA_URL }}image/back_to_top.png" alt=""></div>
