--- a/templates/zhihu/explore.html
+++ b/templates/zhihu/explore.html
@@ -35,8 +35,8 @@
 
         <div>
           <ul class="nav nav-tabs">
-            <li class="active"><a href="#today" data-toggle="tab">今日最热</a></li>
-            <li class=""><a href="#month" data-toggle="tab">本月最热</a></li>
+            <li class=""><a href="#today" data-toggle="tab">今日最热</a></li>
+            <li class="active"><a href="#month" data-toggle="tab">本月最热</a></li>
           </ul>
           <div class="tab-content">
             <div class="tab-pane fade in active" id="today">
