--- a/templates/zhihu/explore.html
+++ b/templates/zhihu/explore.html
@@ -39,7 +39,7 @@
             <li class="active"><a href="#month" data-toggle="tab">本月最热</a></li>
           </ul>
           <div class="tab-content">
-            <div class="tab-pane fade in active" id="today">
+            <div class="tab-pane fade in" id="today">
               {% for answer in page_today.object_list %}
                 <h4><a href="{% url 'question_detail' answer.question.id %}">{{ answer.question.title }}</a></h4>
 
@@ -68,7 +68,7 @@
               {% include 'zhihu/paginator.html' with page=page_today %}
 
             </div>
-            <div class="tab-pane fade" id="month">
+            <div class="tab-pane fade in active" id="month">
               {% for answer in page_month.object_list %}
                 <h4><a href="{% url 'question_detail' answer.question.id %}">{{ answer.question.title }}</a></h4>
                 
