--- a/templates/zhihu/topic_list.html
+++ b/templates/zhihu/topic_list.html
@@ -59,7 +59,7 @@
           <a target="_blank" href="{% url 'topic_detail' topic.id %}" class="media-left"><img width="50" height="50" src="{{ MEDIA_URL }}{{ topic.image }}" alt="话题" class="media-object"></a>
           <div class="media-body">
             <p><b><a target="_blank" href="{% url 'topic_detail' topic.id %}">{{ topic.name }}</a></b></p>
-            <p class="text-muted">{{ topic.user_nums }} 人关注</p>
+            <p class="text-muted">{{ topic.get_user_nums }} 人关注</p>
           </div>
         </div>
         <hr>
