--- a/templates/user/email/reset_password.html
+++ b/templates/user/email/reset_password.html
@@ -1,6 +1,6 @@
 <p>知乎儿 验证码</p>
 
-<p>你重置密码的验证码(有效期10分钟), 请尽快使用: {{ user_check_code }}</p>
+<p>你重置密码的验证码(有效期10分钟), 请尽快使用: {{ check_code }}</p>
 
 <p>请保管好您的验证码</p>
 
