--- a/templates/user/email/user_confirm.html
+++ b/templates/user/email/user_confirm.html
@@ -1,9 +1,9 @@
-<p>{{ user.username }}, 你好</p>
+<p>{{ username }}, 你好</p>
 
 <p>欢迎加入知乎儿!</p>
 
 <p>请点击以下链接确认账户:</p>
 
-<p>https://{{ request.META.HTTP_HOST }}{% url 'user_confirm' token %}</p>
+<p>https://{{ host }}{% url 'user_confirm' token %}</p>
 
 <p><small>该邮件来自知乎儿, 不用回复.</small></p>
